# autofishbot

./: .gitignore  AGENTS.md
autofishbot_rs/: Cargo.toml
autofishbot_rs/src/: config.rs  lib.rs  main.rs
autofishbot_rs/src/discord/: client.rs  gateway.rs  mod.rs  types.rs
autofishbot_rs/src/engine/: bot.rs  captcha.rs  cooldown.rs  database.rs  explorer.rs  game_data.rs  mechanics.rs  mod.rs  optimizer.rs  parser.rs  profile.rs  scheduler.rs  state.rs
autofishbot_rs/src/tui/: app.rs  events.rs  mod.rs  ui.rs
