[package]
name = "autofishbot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.28.1"
crossterm = "0.28"
anyhow = "1.0"
log = "0.4"
tui-logger = { version = "0.13", features = ["tracing-support"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.8"
base64 = "0.22"
regex = "1.10"
futures-util = "0.3"
url = "2.5"
toml = "0.8"
lazy_static = "1.5"
parking_lot = "0.12"
env_logger = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
